=== 1.1.0 (2019-04-25)

* Support execpromises as optional second argument to Pledge.pledge (jeremyevans)

=== 1.0.0 (2016-11-04)

* Initial Public Release