@@ -1,3 +1,3 @@
 /pledge-*.gem
-/lib
+/lib/pledge.so
 /tmp
