@@ -41,7 +41,7 @@ describe "Pledge.pledge" do
     proc{Pledge.pledge("foo")}.must_raise Pledge::InvalidPromise
   end
 
-  it "should raise a Pledge::PermissionIncreaseAttempt if attempting to increase permissinos" do
+  it "should raise a Pledge::PermissionIncreaseAttempt if attempting to increase permissions" do
     pledged("begin; Pledge.pledge('rpath'); rescue Pledge::PermissionIncreaseAttempt; exit 0; end; exit 1")
   end
 
@@ -121,9 +121,9 @@ describe "Pledge.pledge" do
   end
 
   it "should handle both promises and execpromises arguments" do
-    execpledged("proc exec rpath", "stdio rpath", "exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE') ? 0 : 1)").must_equal true
-    execpledged("proc exec", "stdio rpath", "$stderr.reopen('/dev/null', 'w'); exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE') ? 0 : 1)").must_equal false
-    execpledged("proc exec rpath", "stdio", "$stderr.reopen('/dev/null', 'w'); exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE') ? 0 : 1)").must_equal false
+    execpledged("proc exec rpath", "stdio rpath", "exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE'))").must_equal true
+    execpledged("proc exec", "stdio rpath", "$stderr.reopen('/dev/null', 'w'); exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE'))").must_equal false
+    execpledged("proc exec rpath", "stdio", "$stderr.reopen('/dev/null', 'w'); exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE'))").must_equal false
   end
 
   it "should handle nil arguments" do
@@ -133,6 +133,82 @@ describe "Pledge.pledge" do
     execpledged("", nil, "`cat MIT-LICENSE`").must_equal false
     execpledged(nil, "stdio rpath", "`cat MIT-LICENSE`").must_equal true
     execpledged(nil, "stdio", "File.read('MIT-LICENSE')").must_equal true
-    execpledged(nil, "stdio", "$stderr.reopen('/dev/null', 'w'); exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE') ? 0 : 1)").must_equal false
+    execpledged(nil, "stdio", "$stderr.reopen('/dev/null', 'w'); exit(`cat MIT-LICENSE` == File.read('MIT-LICENSE'))").must_equal false
   end
 end
+
+describe "Pledge.unveil" do
+  def unveiled(unveils, code)
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.unveil(#{unveils.inspect}); #{code}")
+  end
+
+  test_file = "spec/#{$$}_test.rb"
+
+  after do
+    File.delete(test_file) if File.file?(test_file)
+  end
+
+  it "should handle unveiling paths" do
+    unveiled({}, "exit(Dir['*'].empty?)").must_equal true
+    unveiled({'.'=>'r'}, "exit(!Dir['*'].empty?)").must_equal true
+
+    test_read = "exit(((File.read('MIT-LICENSE'); true) rescue false))"
+    unveiled({'.'=>'w'}, test_read).must_equal false
+    unveiled({'.'=>'r'}, test_read).must_equal true
+    unveiled({'.'=>'r'}, "exit(((File.open('MIT-LICENSE', 'w'){}; true) rescue false))").must_equal false
+
+    %w'rwxc rwx rwc rxc rx rw rc'.each do |perm|
+      unveiled({'.'=>perm}, test_read).must_equal true
+    end
+
+    %w'wxc wx wc xc x w c'.each do |perm|
+      unveiled({'.'=>perm}, test_read).must_equal false
+    end
+
+    unveiled({'MIT-LICENSE'=>'r'}, test_read).must_equal true
+    unveiled({'Rakefile'=>'r'}, test_read).must_equal false
+    unveiled({'.'=>'r', 'MIT-LICENSE'=>''}, test_read).must_equal false
+    unveiled({}, "Pledge.unveil{} rescue exit(1)").must_equal false
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.unveil_without_lock({'.'=>'r'}); Pledge.unveil({}); #{test_read}").must_equal true
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.unveil('foo/bar'=>'r') rescue exit(1)").must_equal false
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.send(:_unveil, '.', 'f') rescue exit(1)").must_equal false
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.unveil({1=>'s'}) rescue exit(1)").must_equal false
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.unveil({'s'=>1}) rescue exit(1)").must_equal false
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.send(:_unveil, 1, 'r') rescue exit(1)").must_equal false
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.send(:_unveil, '.', 1) rescue exit(1)").must_equal false
+  end
+
+  it "should handle require after unveil with read access after removing from $LOADED_FEATURES" do
+    [File.join('.', test_file), File.join(Dir.pwd, test_file)].each do |f|
+      f = f.inspect
+      system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', <<-END).must_equal true
+        File.open(#{f}, 'w'){|f| f.write '1'}
+        require #{f}
+        Pledge.unveil('spec'=>'r')
+        $LOADED_FEATURES.delete #{f}
+        require #{f}
+      END
+    end
+  end
+
+  it "should handle :gem value to unveil gems" do
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "$stderr.reopen('/dev/null', 'w'); require 'rubygems'; gem 'minitest'; require 'minitest'; Pledge.unveil({}); require 'minitest/benchmark' rescue exit(1)").must_equal false
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "require 'rubygems'; gem 'minitest'; require 'minitest'; Pledge.unveil('minitest'=>:gem); require 'minitest/benchmark' rescue (p $!; puts $!.backtrace; exit(1))").must_equal true
+
+    system(RUBY, '-I', 'lib', '-r', 'unveil', '-e', "Pledge.unveil('gadzooks!!!'=>:gem) rescue exit(1)").must_equal false
+  end
+
+  it "should need create and write access for writing new files, and create access for removing files" do
+    unveiled({'.'=>'w'}, "File.open(#{test_file.inspect}, 'w'){|f| f.write '1'} rescue exit(1)").must_equal false
+    File.file?(test_file).must_equal false
+    unveiled({'.'=>'c'}, "File.open(#{test_file.inspect}, 'w'){|f| f.write '1'} rescue exit(1)").must_equal false
+    File.file?(test_file).must_equal false
+    unveiled({'.'=>'cw'}, "File.open(#{test_file.inspect}, 'w'){|f| f.write '1'}").must_equal true
+    File.read(test_file).must_equal '1'
+
+    unveiled({'.'=>'w'}, "File.delete(#{test_file.inspect}) rescue exit(1)").must_equal false
+    File.read(test_file).must_equal '1'
+    unveiled({'.'=>'c'}, "File.delete(#{test_file.inspect})").must_equal true
+    File.file?(test_file).must_equal false
+  end
+end if Pledge.respond_to?(:_unveil, true)
